src/scss/_base.scss
html, body {
  margin: 0px;
  padding: 0px;
  height: 100%;
  min-height: 100%;
}

li {
  list-style: none;
}
body {
  @include display(flex);
  font-family: 'Poppins', sans-serif;
  line-height: 1.5;
  letter-spacing: 0.07em;
}
html { font-size: 62.5%; }
body { font-size: 1.4rem; } /* =14px */



h1 { font-size: 4.0rem; line-height: 1.2;}
h2 { font-size: 3.6rem; line-height: 1.25;  }
h3 { font-size: 3.0rem; line-height: 1.3;   }
h4 { font-size: 2.4rem; line-height: 1.35;  }
h5 { font-size: 1.8rem; line-height: 1.5;   }
h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }

h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
  font-weight: 300;
  letter-spacing: 0.07em;
}

/* Larger than phablet */
@media (min-width: 550px) {
  h1 { font-size: 5.0rem; }
  h2 { font-size: 4.2rem; }
  h3 { font-size: 3.6rem; }
  h4 { font-size: 3.0rem; }
  h5 { font-size: 2.4rem; }
  h6 { font-size: 1.5rem; }
}

p {
  margin-top: 0; }

ul,
ol {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

img {
  display: block;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

#mount-point {
  height:100%;
  width: 100%;
}

.pointer {
  cursor: pointer;
}

.blurring {
  -webkit-filter: blur(5px);
}


.left-right{
  @include display(flex);
  @include align-items(center);
  > div {
    @include flex-grow(1);
    &:first-child {
      text-align: left;
    }
    &:last-child {
      text-align: right;
    }
  }
}

.pointer {
  cursor: pointer;
}

.pink-hover-red {
  color: rgba($red, 0.5);
  @include transition(color 0.2s ease-in-out);
  &:hover {
    color: $red;
  }
}

.margin-left-sm {
  margin-left: 10px;
}

.margin-right-sm {
  margin-right: 10px;
}

.margin-bottom {
  margin-bottom: 30px;
}
.margin-bottom-sm {
  margin-bottom: 10px;
}


.flex {
  @include display(flex);
}

.flex-center {
  @include align-items(center);
}

.no-select {
  -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */
  user-select: none;          /* Likely future */
}

.small-text {
  font-size: 10px;
}

